--- a/public/index.html
+++ b/public/index.html
@@ -24,6 +24,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preload" href="%PUBLIC_URL%/static/media/alata-latin-400.6e87a9af.woff2" as="font" type="font/woff2" crossorigin />
     <title>Disney Reservation Reminders</title>
   </head>
   <body>
