load phone input styles async

--- a/public/index.html
+++ b/public/index.html
@@ -10,6 +10,7 @@
       content="Get email and text reminders to book your Disney Dining and FastPass+ Reservations!"
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="stylesheet" href="%PUBLIC_URL%/2.527a6f54.chunk.css" media="print" onload="this.media='all'" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
