--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,47 @@
     />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <link rel="stylesheet" href="%PUBLIC_URL%/2.527a6f54.chunk.css" media="print" onload="this.media='all'" />
+    <style>
+      body {
+        background-color: #0093c4 !important;
+        background-size: 70px;
+        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='57.7' height='57.7' viewBox='0 0 57.7 57.7'%3E%3Cpath fill='%23fff' fill-opacity='0.3' d='M31.8 28.4c-.2 0-.3 0-.5-.1.3.4.4 1 .4 1.5 0 1.6-1.3 2.9-2.9 2.9s-2.9-1.3-2.9-2.9c0-.5.1-1 .4-1.5h-.4c-.9 0-1.7-.8-1.7-1.7 0-.9.8-1.7 1.7-1.7.9 0 1.7.8 1.7 1.7 0 .2 0 .3-.1.5.4-.2.8-.3 1.3-.3s1 .1 1.4.4c-.1-.2-.1-.4-.1-.5 0-.9.8-1.7 1.7-1.7s1.7.8 1.7 1.7c0 .9-.8 1.7-1.7 1.7zM43.2 3.9c1.6 0 2.9-1.3 2.9-2.9 0-.3 0-.7-.2-1h-5.5c-.1.3-.2.7-.2 1 .1 1.6 1.4 2.9 3 2.9zM14.4 3.9c1.6 0 2.9-1.3 2.9-2.9 0-.3 0-.7-.2-1h-5.5c-.1.3-.2.7-.2 1 .1 1.6 1.4 2.9 3 2.9zM46.2 57.3c.9 0 1.7-.8 1.7-1.7 0-.9-.8-1.7-1.7-1.7-.9 0-1.7.8-1.7 1.7 0 .1 0 .3.1.5-.4-.3-.9-.4-1.4-.4s-.9.1-1.3.3c.1-.2.1-.3.1-.5 0-.9-.8-1.7-1.7-1.7-.9 0-1.7.8-1.7 1.7 0 .9.8 1.7 1.7 1.7h.4c-.1.2-.2.3-.2.5H46c-.1-.2-.1-.4-.2-.5.1.1.2.1.4.1zM17.4 57.3c.9 0 1.7-.8 1.7-1.7 0-.9-.8-1.7-1.7-1.7s-1.7.8-1.7 1.7c0 .1 0 .3.1.5-.4-.3-.9-.4-1.4-.4s-.9.1-1.3.3c.1-.2.1-.3.1-.5 0-.9-.8-1.7-1.7-1.7-.9 0-1.7.8-1.7 1.7 0 .9.8 1.7 1.7 1.7h.4c-.1.2-.2.3-.2.5h5.5c-.1-.2-.1-.4-.2-.5.1.1.2.1.4.1zM57.7 26.8c-.5 0-.9.1-1.3.3.1-.2.1-.3.1-.5 0-.9-.8-1.7-1.7-1.7s-1.8.8-1.8 1.7c0 .9.8 1.7 1.7 1.7h.4c-.3.5-.4 1-.4 1.5 0 1.6 1.3 2.9 2.9 2.9l.1-5.9zM2.8 29.8c0-.5-.1-1.1-.4-1.5.2.1.3.1.5.1.9 0 1.7-.8 1.7-1.7S3.8 25 3 25c-.9 0-1.7.8-1.7 1.7 0 .1 0 .3.1.5-.4-.3-.9-.4-1.4-.4v5.9c1.6 0 2.8-1.3 2.8-2.9z'/%3E%3C/svg%3E");
+        margin: 0;
+        -webkit-font-smoothing: antialiased;
+        -moz-osx-font-smoothing: grayscale;
+      }
+      .App {
+        min-height: 100vh;
+      }
+      .App-inner {
+        background-color: #f7f7f7;
+        border-radius: 2em;
+      }
+      .App-title {
+        text-align: center;
+        margin-top: 0;
+        max-width: 540px;
+        color: #0093c4;
+        line-height: 1.25;
+      }
+      .App-loadingIcon {
+        position: relative;
+        top: 2px;
+      }
+      @media (max-width: 450px) {
+        .App-resultLine {
+          width: 100%;
+        }
+      }
+
+      .react-tel-input .flag-dropdown {
+        top: 35px;
+        bottom: auto;
+      }
+      .flag.undefined .arrow {
+        opacity: 0;
+      }
+    </style>
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
