adjusting styles for date results

--- a/public/index.html
+++ b/public/index.html
@@ -38,10 +38,11 @@
         position: relative;
         top: 2px;
       }
-      @media (max-width: 450px) {
-        .App-resultLine {
-          width: 100%;
-        }
+      .App-resultLine {
+        text-align: center;
+      }
+      .App-dateResult {
+        display: block;
       }
 
       .react-tel-input .flag-dropdown {
