color to date and time result

--- a/public/index.html
+++ b/public/index.html
@@ -44,6 +44,9 @@
       .App-dateResult {
         display: block;
       }
+      .App-dateTime {
+        color: #0093c4;
+      }
 
       .react-tel-input .flag-dropdown {
         top: 35px;
